# tabpfn_common_utils

./: .gitignore  CHANGELOG.md  README.md  devenv.nix  environment.py  expense_estimation.py  load_test.py  pyproject.toml  regression_pred_result.py  requirements.txt  test_expense_estimation.py  utils.py
.github/workflows/: pull_requests.yml  release.yml
datasets/: X_test.csv  X_train.csv
output/DEVELOPMENT/: sql_app.db
src/tabpfn_common_utils/: __init__.py  _version.py  main.py  regression_pred_result.py  utils.py
src/tabpfn_common_utils/telemetry/: __init__.py  events.py  service.py  utils.py
src/tabpfn_common_utils/telemetry/core/: __init__.py  config.py  decorators.py  events.py  runtime.py  service.py  state.py
src/tabpfn_common_utils/telemetry/interactive/: __init__.py  flows.py  prompt.py
src/tabpfn_common_utils/telemetry/interactive/prompts/: base.py  identity.py  newsletter.py
tests/: test_analytics_http_client.py  test_environment.py  test_expense_estimation.py  test_regression_pred_result.py  test_usage_analytics.py  test_utils.py
tests/telemetry/: test_events.py
tests/telemetry/core/: test_decorators.py  test_events.py  test_runtime.py  test_service.py  test_state.py
usage_analytics/: __init__.py  analytics_config.py  analytics_definition.py  analytics_func.py  analytics_http_client.py
