[project]
name = "tabpfn-common-utils"
version = "0.1.0"
description = "Common utils shared between tabpfn codebases."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "typing-extensions>=4.12.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
