[project]
name = "tabpfn-common-utils"
version = "0.1.0"
description = "Common utils shared between tabpfn codebases."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2,<3",
    "pandas>=2.2,<3",
    "scikit-learn>=1.4,<2",
    "typing-extensions>=4.12,<5",
    "posthog~=6.7",
]

[project.optional-dependencies]
dev = [
  "pyright>=1.1.399",
  "pytest>=8.3",
  "pytest-cov>=5",
  "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/priorlabs/tabpfn_common_utils"
Issues = "https://github.com/priorlabs/tabpfn_common_utils/issues"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# src/ layout: explicitly point to your package path
packages = ["src/tabpfn_common_utils"]

# Keep the wheel slim; only force-include the typing marker.
[tool.hatch.build.targets.wheel.force-include]
"src/tabpfn_common_utils/py.typed" = "tabpfn_common_utils/py.typed"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.pyright]
include = ["src", "tests"]
